feat(core): implement app deployment and versioning
Add app lifecycle management with deploy tasks, version tracking, and
database migrations. Refactor core services and AI tools, update frontend
pages for app chat and user auth, and adjust CI/CD configurations.
Include unit tests for new backend services and controllers.